--- a/aop_sale/views/mass_loss_order.xml
+++ b/aop_sale/views/mass_loss_order.xml
@@ -9,10 +9,20 @@
                 <form>
                     <header>
                         <field name="state" string="状态" readonly="1" widget="statusbar"/>
-                        <button name="action_return_to_factory" id="action_return_to_factory" string="返厂" class="btn-primary" type="object" />
+                        <button name="action_return_to_factory" id="action_return_to_factory" string="返厂"
+                                class="btn-primary" type="object"/>
                     </header>
                     <sheet>
-
+                        <group>
+                            <group>
+                                <field name="picking_id" string="任务" readonly="1"
+                                       options="{'no_create_edit': True, 'no_quick_create': True}"/>
+                            </group>
+                            <group>
+                                <field name="mass_attachment_ids" string="质损附件信息" widget="many2many_tags"
+                                       options="{'no_create_edit': True, 'no_quick_create': True}"/>
+                            </group>
+                        </group>
                         <group>
                             <group>
                                 <field name="name" string="质损单号"/>
@@ -106,6 +116,10 @@
                             <field name="approval_opinion" string="审核意见"/>
                         </group>
                     </sheet>
+                    <div class="oe_chatter">
+                        <field name="message_follower_ids" widget="mail_followers" groups="base.group_user"/>
+                        <field name="message_ids" widget="mail_thread"/>
+                    </div>
                 </form>
             </field>
         </record>
@@ -184,6 +198,36 @@
             </field>
         </record>
 
+        <record id="mass_loss_order_attachment_form" model="ir.ui.view">
+            <field name="name">mass.loss.attachment.form</field>
+            <field name="model">mass.loss.attachment.template</field>
+            <field name="arch" type="xml">
+                <form string="质损附件信息">
+                    <sheet>
+                        <group>
+                            <group>
+                                <field name="name" string="质损类型"/>
+                            </group>
+                            <group>
+                                <field name="files" widget="many2many_binary" string="附件"/>
+                            </group>
+                        </group>
+                    </sheet>
+                </form>
+            </field>
+        </record>
+
+        <record id="mass_loss_order_attachment_tree" model="ir.ui.view">
+            <field name="name">mass.loss.attachment.tree</field>
+            <field name="model">mass.loss.attachment.template</field>
+            <field name="arch" type="xml">
+                <tree string="质损附件信息">
+                    <field name="name" string="质损类型"/>
+                    <field name="files" string="附件"/>
+                </tree>
+            </field>
+        </record>
+
         <record id="mass_loss_order_part_tree" model="ir.ui.view">
             <field name="name">mass.loss.part.tree</field>
             <field name="model">mass.loss.part</field>
@@ -214,6 +258,14 @@
             <field name="name">质损部位</field>
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">mass.loss.part</field>
+            <field name="view_type">form</field>
+            <field name="view_mode">tree,form</field>
+        </record>
+
+        <record id="action_mass_loss_attachment" model="ir.actions.act_window">
+            <field name="name">质损附件信息</field>
+            <field name="type">ir.actions.act_window</field>
+            <field name="res_model">mass.loss.attachment.template</field>
             <field name="view_type">form</field>
             <field name="view_mode">tree,form</field>
         </record>
