--- a/aop_sale/views/stock_picking_batch_view.xml
+++ b/aop_sale/views/stock_picking_batch_view.xml
@@ -14,7 +14,7 @@
 
                 <field name="plan_number" attrs='{"invisible": [("dispatch_type", "!=", "tl")]}'/>
 
-                <field name="car_no" attrs='{"invisible": [("dispatch_type", "!=", "tl")]}'/>
+                <field name="car_no_ids" widget="many2many_tags" attrs='{"invisible": [("dispatch_type", "!=", "tl")]}'/>
 
 
                 <field name="plate_number" attrs='{"invisible": [("dispatch_type", "!=", "gl")]}'/>
