--- a/aop_sale/views/stock_picking.xml
+++ b/aop_sale/views/stock_picking.xml
@@ -48,6 +48,7 @@
                 <field name="move_id_without_package" string=""/>
                 <field name="aging"/>
                 <field name="degree"/>
+                <field name="need_insurance" />
                 <field name="mass_attachment_ids" string="质损附件信息" widget="many2many_tags"
                        options="{'no_create_edit': True, 'no_quick_create': True}"/>
                 <field name="mass_order_id" string="质损单" attrs="{'invisible': [('mass_order_id', '=', False)]}"
