--- a/aop_sale/views/delivery_carrier.xml
+++ b/aop_sale/views/delivery_carrier.xml
@@ -114,13 +114,15 @@
 
                 <xpath expr="//field[@name='product_id']" position="after">
 
-                    <!--
-                    <field name="route_id" />
-                    -->
-
                     <field name="service_product_id" />
 
 
+
+                </xpath>
+
+                <xpath expr="//field[@name='integration_level']" position="before">
+                    <field name="start_position"/>
+                    <field name="end_position"/>
                 </xpath>
 
 
